--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@types/socket.io-client": "^3.0.0",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
