feat: axios 모듈화

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,23 @@
   "compilerOptions": {
     "target": "ES6",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable",
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost",
+      
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
+    "typeRoots": ["./node_modules/@types", "@types"],
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -22,5 +36,5 @@
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }],
-    "exclude": ["node_modules"]
+  "exclude": ["node_modules"]
 }
