--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@types/socket.io-client": "^3.0.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
+    "path": "^0.12.7",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "recoil": "^0.7.7",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
