--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
+    "react-textarea-autosize": "8.5.3",
     "recoil": "^0.7.7",
     "tailwindcss": "^3.4.3",
     "vite-tsconfig-paths": "^4.3.2"
