--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-textarea-autosize": "8.5.3",
     "recoil": "^0.7.7",
     "tailwindcss": "^3.4.3",
+    "terser": "^5.31.6",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
