--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    { "source": "/(.*)", "destination": "/" },
+    {
+      "source": "/api/:path*",
+      "destination": "https://api.live-support.shop/:path*"
+    }
   ]
 }
